--- a/research/1_data_ingestion.ipynb
+++ b/research/1_data_ingestion.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,44 +164,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-10-22 19:17:16,805: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2024-10-22 19:17:16,806: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2024-10-22 19:17:16,807: INFO: common: created directory at: artifacts]\n",
-      "[2024-10-22 19:17:16,808: INFO: common: created directory at: artifacts/data_ingestion]\n",
-      "[2024-10-22 19:17:21,888: INFO: 2488346600: artifacts/data_ingestion/data.zip download! with following info : \n",
-      "Connection: close\n",
-      "Content-Length: 11616915\n",
-      "Cache-Control: max-age=300\n",
-      "Content-Security-Policy: default-src 'none'; style-src 'unsafe-inline'; sandbox\n",
-      "Content-Type: application/zip\n",
-      "ETag: \"adf745abc03891fe493c3be264ec012691fe3fa21d861f35a27edbe6d86a76b1\"\n",
-      "Strict-Transport-Security: max-age=31536000\n",
-      "X-Content-Type-Options: nosniff\n",
-      "X-Frame-Options: deny\n",
-      "X-XSS-Protection: 1; mode=block\n",
-      "X-GitHub-Request-Id: 5C9D:300F3E:4AB691:5DA4E3:6717ACE4\n",
-      "Accept-Ranges: bytes\n",
-      "Date: Tue, 22 Oct 2024 13:47:18 GMT\n",
-      "Via: 1.1 varnish\n",
-      "X-Served-By: cache-maa10233-MAA\n",
-      "X-Cache: MISS\n",
-      "X-Cache-Hits: 0\n",
-      "X-Timer: S1729604837.263963,VS0,VE941\n",
-      "Vary: Authorization,Accept-Encoding,Origin\n",
-      "Access-Control-Allow-Origin: *\n",
-      "Cross-Origin-Resource-Policy: cross-origin\n",
-      "X-Fastly-Request-ID: 97c6d6a66da54cc9da50e0c7c1172b9eb3a62c1b\n",
-      "Expires: Tue, 22 Oct 2024 13:52:18 GMT\n",
-      "Source-Age: 1\n",
-      "\n",
-      "]\n"
+      "[2024-12-09 21:55:55,137: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2024-12-09 21:55:55,146: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2024-12-09 21:55:55,149: INFO: common: created directory at: artifacts]\n",
+      "[2024-12-09 21:55:55,152: INFO: common: created directory at: artifacts/data_ingestion]\n",
+      "[2024-12-09 21:55:55,155: INFO: 2488346600: File already exists of size: ~ 11345 KB]\n"
      ]
     }
    ],
